--- a/README.qmd
+++ b/README.qmd
@@ -21,13 +21,15 @@ A few important notes:
 
 - Add these environment variables to your GitHub repository by going to Settings > Secrets and variables > Actions and creating two new respository secrets with your username and password:
 
-![](img/secrets.png)
+  ![](img/secrets.png)
 
-- Right now, [`.github/workflows/post-to-bsky.yml`](.github/workflows/post-to-bsky.yml) is configured to only run manually (it uses `on: workflow_dispatch`), but you can adjust that to follow a cron schedule or occur after pushing a commit or whatever. [See this for all the kinds of events you can use](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows).
+- Right now, [`.github/workflows/post-to-bsky.yml`](.github/workflows/post-to-bsky.yml) is configured to only run manually (it uses `on: workflow_dispatch`), but you can adjust that to follow a cron schedule or occur after pushing a commit or whatever. [See this for all the kinds of events you can use](https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows). To trigger the action manually, go to Actions > Name of the workflow > Run workflow…
+
+  ![](img/action.png)
 
 - [That workflow file](.github/workflows/post-to-bsky.yml) uses [R's collection of GitHub Actions](https://github.com/r-lib/actions) to install R, install packages from an {renv} lockfile, and run the code. You can make this as fancy as you want.
 
-- Right now, [`script.R`](script.R) connects to the Bluesky API, generates three random numbers, and posts them to Bluesky. It's super primitive but it works. In real life, you'd want to 
+- Right now, [`script.R`](script.R) connects to the Bluesky API, generates three random numbers, and posts them to Bluesky. It's super primitive but it works. In real life, you'd want to:
 
   1. Maybe make a [better wrapper around the API](https://httr2.r-lib.org/articles/wrapping-apis.html)
   2. Do something more exciting than generating random numbers. Parse an RSS feed. Generate random text. Post plots or generative artwork. Whatever you want. 
